# chess2

./: .gitignore  Dockerfile  LICENSE  README.md  chess2.spec  docker-compose.yml  play.py  pyproject.toml
assets/: icon.icns
src/: play.py  utils.py
src/core/: board.py  piece.py
src/game/: state.py
src/gui/: app.py  renderer.py
tests/: test_game.py
